# rpg_e2vid

./: .gitignore  explore.ipynb  image_reconstructor.py  pyproject.toml  run_reconstruction.py
base/: base_model.py
experiments/: .gitignore  align.py  temporal-spacial-alignment.ipynb
model/: model.py  submodules.py
scripts/: extract_events_from_rosbag.py  resample_reconstructions.py
src/rpg_e2vid/model/: model.py  unet.py
src/rpg_e2vid/options/: inference_options.py
src/rpg_e2vid/utils/: inference_utils.py  loading_utils.py  timers.py
training/: dataset.py  history.py  loss.py  run.py  util.py  vis.py
utils/: event_readers.py  inference_utils.py  util.py
